Prevent text overlap with input clear icon

--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -7,6 +7,7 @@
 
 input {
   width: 100%;
+  padding: 0 dp(56) 0 dp(16);
 }
 
 .clear {
