--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,7 +41,6 @@ body {
 
 .input {
   height: dp(56);
-  padding: 0 dp(16);
   font-size: dp(18);
   transition: 0.15s ease-out;
   border: 2px solid $text-color;
